src/objects/Contract_Extranet_Account__c.object
<CustomObject>
    <description>Used to track extra net accounts that need to be created during contract loadin</description>
    <fields>
        <fullName>Contract_Checklist__c</fullName>
        <description>What checklist these new accounts are associated with</description>
        <label>Contract Checklist</label>
        <referenceTo>Contract_Checklist__c</referenceTo>
        <relationshipLabel>Contract Extranet Accounts</relationshipLabel>
        <relationshipName>Contract_Extranet_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Id from PSG Salesforce</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name of Person account is for</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Extranet_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Extranet is new or just an update to an existing account</description>
        <label>New Extranet Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Extranet User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extranet View Reports</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract Extranet Account</label>
    <nameField>
        <label>Email</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Extranet Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>